# wayland-rdp

./: .gitignore  00-MASTER-SPECIFICATION.md  01-ARCHITECTURE.md  02-TECHNOLOGY-STACK.md  04-DATA-STRUCTURES.md  05-PROTOCOL-SPECIFICATIONS.md  16-COPY-BUG-ROOT-CAUSE.md  ALL-FIXES-SUMMARY.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE-REVIEW-2025-12-10.md  BRANCH-README.md  BREAKTHROUGH-2025-12-27.md  BUILD.md  BUSINESS-STRATEGY-REALITY.md  CCW-CONTINUE-SESSION.md  CCW-FINAL-STRICT-PROMPT.txt  CCW-NEXT-SESSION-CLIPBOARD-INPUT.md  CCW-NEXT-SESSION-PROMPT.md  CCW-SESSION-START-2025-11-18.md  CCW-START-P1-04-PIPEWIRE.txt  CCW-UNATTENDED-CONTINUE.md  CHANGELOG.md  CLIPBOARD-ARCHITECTURE-FINAL.md  CLIPBOARD-DEADLOCK-FIX.md  CLIPBOARD-FIFO-FIX.md  CLIPBOARD-IMPLEMENTATION-PLAN.md  CLIPBOARD-LINUX-TO-WINDOWS-INVESTIGATION.md  CLIPBOARD-STATUS-AND-NEXT-STEPS.md  COMPLETE-SETUP-SCRIPT.sh  COMPOSITOR-MODE-COMPLETE.md  COMPOSITOR-VS-NATIVE-DECISION.md  COMPREHENSIVE-ANALYSIS-AND-PLAN.md  COMPREHENSIVE-AUDIT-REPORT.md  COMPREHENSIVE-RESEARCH-FINDINGS-2025-12-29.md  COMPREHENSIVE-RESEARCH-FINDINGS.md  COMPREHENSIVE-SOLUTION-RESEARCH-2025-12-28.md  CONFIG-WIRING-COMPLETE.md  CONTINUE-HERE.md  CONTRIBUTING.md  CRITICAL-ISSUES-FOUND.md  (+157 more)
.claude/research-backups/: research-state_20251211_114345.json
.github/: FUNDING.yml
archive/ccw-prompts/: CCW-USE-THIS-EXACT-CARGO.txt  START-CCW-OVERNIGHT.txt  START-CCW-SESSION.txt  START-CCW-UNATTENDED.txt
archive/old-scripts/: TASK-P1-03-RDP-PROTOCOL-OUTDATED.md  TASK-P1-05-PIPEWIRE-INCOMPLETE.md  TASK-P1-07-ENCODER-VAAPI.md
archive/phase1-tasks/: TASK-P1-02-SECURITY.md  TASK-P1-03-PORTAL-INTEGRATION-REVISED.md  TASK-P1-06-IRONRDP-SERVER-INTEGRATION.md  TASK-P1-08-CLIPBOARD.md  TASK-P1-09-MULTIMONITOR.md
archive/reference/: TESTING-SPECIFICATION.md
archived/: TASK-P1-04-PORTAL-INTEGRATION-OUTDATED.md  TASK-P1-09-GRAPHICS-CHANNEL.md  TASK-P1-10-INPUT-INCOMPLETE.md  TASK-P1-12-MULTIMONITOR-INCOMPLETE.md
benches/: color_conversion.rs  damage_detection.rs  network_throughput.rs  video_encoding.rs
bundled-crates/lamco-clipboard-core/: CHANGELOG.md  Cargo.toml  README.md
bundled-crates/lamco-clipboard-core/src/: error.rs  formats.rs  image.rs  lib.rs  loop_detector.rs  sanitize.rs  sink.rs  transfer.rs
bundled-crates/lamco-rdp-clipboard/: CHANGELOG.md  Cargo.toml  README.md
bundled-crates/lamco-rdp-clipboard/src/: backend.rs  error.rs  event.rs  factory.rs  lib.rs
certs/: cert.pem  key.pem  test-cert.pem  test-key.pem
config/: config.toml.example  rhel9-config.toml  test-egfx.toml  wrd-server.toml
config/archive/: config.toml.old-20260107
deploy/: install-headless.sh
deploy/systemd/: wrd-server-headless.service  wrd-server-headless@.service
docs/: ANALYSIS-2025-12-27-EVENING.md  ARCHITECTURE-AND-STATUS-2025-12-21.md  AVC444-AUX-OMISSION-CRITICAL-FINDING.md  AVC444-P-FRAME-CORRUPTION-INVESTIGATION-2025-12-27-NIGHT.md  AVC444-RESEARCH-SUMMARY-2025-12-25.md  BLACK-SCREEN-DEEP-ANALYSIS.md  CHANNEL-CONFIGURATION-GUIDE-2026-01-18.md  CODEBASE-ARCHITECTURE-AUDIT-2026-01-04.md  CODEBASE-REALITY-CHECK.md  COMPREHENSIVE-IMPLEMENTATION-PLAN.md  CONFIG-AND-CLI-ANALYSIS.md  CONFIGURATION-REFERENCE.md  CONFIGURATION.md  DAMAGE-TRACKING-STATUS.md  DEPENDENCY-ARCHITECTURE.md  DIAGNOSTIC-PLAN-2025-12-27.md  DISTRIBUTION-STRATEGY.md  DISTRO-TESTING-MATRIX.md  DOCUMENTATION-UPDATE-SUMMARY-2026-01-18.md  DOCUMENTATION-UPDATES-COMPLETE-2026-01-18.md  EGFX-COMPREHENSIVE-ANALYSIS-2025-12-24.md  EGFX-H264-COMPREHENSIVE-STATUS-2025-12-24.md  EGFX-INVESTIGATION-SUMMARY-2025-12-24.md  EGFX-RFX_RECT-DIAGNOSIS-2025-12-24.md  FEATURE-SUPPORT-MATRIX.md  FEATURE_ROADMAP.md  FINAL-STATUS-2026-01-18.md  FIX-DEPLOYED-2025-12-27.md  FIX-PORTAL-V1-SESSION-2026-01-06.md  FLATPAK-BUILD-PLAN-WLR.md  FLATPAK-DEPLOYMENT.md  FREERDP-WINDOWS-CLIENT-SETUP.md  FULL-FEATURED-GUI-PLAN-2026-01-19.md  FUSE-CLIPBOARD-REQUIREMENTS.md  GUI-ADDITION-ANALYSIS-2026-01-19.md  GUI-IMPLEMENTATION-STATUS-2026-01-19.md  GUI-SOFTWARE-DESIGN-SPECIFICATION.md  HANDOVER-2025-12-23-CLIPBOARD-FILE-TRANSFER.md  HANDOVER-2025-12-25-EGFX-COMPLETE.md  HANDOVER-2025-12-26-PRODUCT-AUDIT.md  (+77 more)
docs/analysis/: PHASE-1-3-COMPREHENSIVE-ASSESSMENT.md
docs/architecture/: COLOR-ARCHITECTURE-EXECUTIVE-SUMMARY.md  COMPOSITOR-DEPENDENCY-ARCHITECTURE-ANALYSIS.md  COMPREHENSIVE-ARCHITECTURE-AUDIT-2025-12-27.md  FAILURE-MODES-AND-FALLBACKS.md  FILE-TRANSFER-IMPLEMENTATION-PLAN.md  MULTI-BACKEND-ARCHITECTURE-RESEARCH.md  NVENC-AND-COLOR-INFRASTRUCTURE.md  SESSION-PERSISTENCE-ARCHITECTURE.md  SESSION-PERSISTENCE-QUICK-REFERENCE.md  X11-XVFB-IMPLEMENTATION-GUIDE.md
docs/archive/: COMPREHENSIVE-AUDIT-REPORT-2026-01-18.md  FINALIZATION-AND-PUBLICATION-PLAN-2026-01-18.md
docs/decisions/: 001-clipboard-rewiring.md
docs/design/: H264-ENCODER-ABSTRACTION.md
docs/drafts/: openh264-msrv-issue.md  zune-jpeg-msrv-issue.md
docs/guides/: DEPLOYMENT-GUIDE-MULTIPLEXER.md  FREERDP-WINDOWS-BUILD-GUIDE.md  MANUAL-SETUP-INSTRUCTIONS.md  (+2 more)
examples/: nvenc_test.rs  pipewire_capture.rs  portal_info.rs
extension/: README.md  TESTING.md  extension.js  install.sh  metadata.json
packaging/: DEPLOYMENT-READY.md  ai.lamco.rdp-server.obs.yml  create-vendor-tarball.sh  flatpak.yaml  io.lamco.rdp-server.yml  lamco-rdp-server.dsc  lamco-rdp-server.spec
phase1-tasks/: TASK-P1-01-FOUNDATION.md  TASK-P1-04-PIPEWIRE-COMPLETE.md  TASK-P1-05-BITMAP-CONVERSION.md  TASK-P1-06-ENCODER-SOFTWARE.md  TASK-P1-07-INPUT-HANDLING.md  TASK-P1-08-VIDEO-PIPELINE.md  TASK-P1-10-TESTING-INTEGRATION.md  TASK-P1-11-CLIPBOARD.md  TASK-P1-13-TESTING.md
reference/: DEPLOYMENT-GUIDE.md  PERFORMANCE-REQUIREMENTS.md  SECURITY-REQUIREMENTS.md
scripts/: RHEL9-BUILD-PLAN.md  build.sh  deploy-to-rhel9.sh  generate-certs.sh  run-server.sh  run-test-multiplexer.sh  setup-ubuntu.sh  setup.sh  test.sh  verify-dependencies.sh
src/: lib.rs  main.rs
systemd/: README.md  wrd-compositor@.service  wrd-login.service
test-package/: README.txt  config.toml  run-server.sh
tests/: compositor_integration.rs  login_integration.rs  rdp_integration.rs  security_integration.rs
(+376 files in other folders)
