[package]
name = "lamco-rdp-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Lamco <contact@lamco.ai>"]
description = "Wayland RDP server - Portal mode for Linux desktop sharing"
license = "BUSL-1.1"
repository = "https://github.com/lamco-admin/lamco-rdp-server"
homepage = "https://lamco.ai"
keywords = ["rdp", "wayland", "remote-desktop", "linux", "screen-sharing"]
categories = ["network-programming", "multimedia"]

[[bin]]
name = "lamco-rdp-server"
path = "src/main.rs"

[lib]
name = "lamco_rdp_server"
path = "src/lib.rs"

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Lamco crates (published to crates.io)
# -----------------------------------------------------------------------------
# Updated 2025-12-24: Using latest published versions
# lamco-portal 0.2.2: Includes EAGAIN fix for non-blocking FD
# lamco-clipboard-core 0.4.0: FileDescriptor support, sanitization
#
# NOTE: lamco-rdp-clipboard MUST remain a local path dependency because it
# implements CliprdrBackend trait from ironrdp-cliprdr. Since we patch
# ironrdp-cliprdr to our fork (for file transfer methods), lamco-rdp-clipboard
# must compile against the same patched version to avoid trait conflicts.
lamco-wayland = "0.2.2"
lamco-rdp = "0.4.0"
lamco-portal = { version = "0.2.2", features = ["dbus-clipboard"] }
# Local fork with fix for zero-size buffer passthrough bug
# See docs/QUALITY-ISSUE-ANALYSIS-2025-12-27.md for details
# TODO: Publish fix to crates.io and revert to version dependency
lamco-pipewire = { path = "../lamco-rdp-workspace/crates/lamco-pipewire" }
lamco-video = "0.1.2"
lamco-rdp-input = "0.1.1"
lamco-clipboard-core = { path = "../lamco-rdp-workspace/crates/lamco-clipboard-core", features = ["image"] }
# Local path required - tightly coupled to patched ironrdp-cliprdr
lamco-rdp-clipboard = { path = "../lamco-rdp-workspace/crates/lamco-rdp-clipboard" }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Configuration and CLI
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }

# -----------------------------------------------------------------------------
# Logging and tracing
# -----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# -----------------------------------------------------------------------------
# Error handling
# -----------------------------------------------------------------------------
anyhow = "1.0"
thiserror = "2"

# -----------------------------------------------------------------------------
# Networking and protocols
# -----------------------------------------------------------------------------
bytes = "1.5"
rustls-pemfile = "2.2"

# -----------------------------------------------------------------------------
# RDP protocol (IronRDP from local fork - includes file transfer support)
# See IRONRDP-PATCHES.md for pending PR details
# Using local path for development; change to git for release
# -----------------------------------------------------------------------------
ironrdp = { path = "/home/greg/wayland/IronRDP/crates/ironrdp", default-features = false, features = ["server"] }
ironrdp-server = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-server", features = ["egfx"] }
ironrdp-tokio = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-tokio", features = ["reqwest"] }
ironrdp-pdu = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-pdu" }
ironrdp-displaycontrol = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-displaycontrol" }
ironrdp-cliprdr = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-core = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-core" }
ironrdp-dvc = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-dvc" }
ironrdp-svc = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-svc" }
ironrdp-egfx = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-egfx" }

# -----------------------------------------------------------------------------
# Wayland and Portal integration
# -----------------------------------------------------------------------------
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }
ashpd = { version = "0.12.0", features = ["tokio"] }
zbus = "4.0.1"
enumflags2 = "0.7"

# -----------------------------------------------------------------------------
# PipeWire integration
# -----------------------------------------------------------------------------
pipewire = "0.8"
libspa = "0.8"
libspa-sys = "0.8"

# -----------------------------------------------------------------------------
# Input handling
# -----------------------------------------------------------------------------
xkbcommon = "0.7"

# -----------------------------------------------------------------------------
# Image processing
# -----------------------------------------------------------------------------
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
percent-encoding = "2.3"
sha2 = "0.10"

# -----------------------------------------------------------------------------
# H.264 encoding (optional, for EGFX)
# -----------------------------------------------------------------------------
# Using fork with VUI support for proper color space signaling (full range)
# PR: https://github.com/ralfbiedert/openh264-rs/pull/86
# TEMPORARY: Using local path with NUM_REF extension for AVC444 dual-subframe support
openh264 = { path = "/home/greg/openh264-rs/openh264", optional = true }
openh264-sys2 = { path = "/home/greg/openh264-rs/openh264-sys2", default-features = false, features = ["source"], optional = true }

# -----------------------------------------------------------------------------
# Hardware-accelerated encoding (optional)
# -----------------------------------------------------------------------------
# VA-API: Intel/AMD GPU encoding (ChromeOS bindings)
# Requires libva-dev 1.20.0+ installed
cros-libva = { version = "0.0.13", optional = true }

# NVENC: NVIDIA GPU encoding (Video Codec SDK bindings)
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# CUDA runtime bindings for NVENC (cudarc used by nvidia-video-codec-sdk but not re-exported)
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver", "cuda-version-from-build-system"] }

# -----------------------------------------------------------------------------
# System and utilities
# -----------------------------------------------------------------------------
nix = { version = "0.27", features = ["signal", "process", "mman"] }
libc = "0.2"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
sysinfo = "0.30"

# -----------------------------------------------------------------------------
# Memory management
# -----------------------------------------------------------------------------
memmap2 = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# -----------------------------------------------------------------------------
# Certificate generation
# -----------------------------------------------------------------------------
rcgen = "0.12"
time = { version = "0.3", features = ["formatting", "macros"] }

# -----------------------------------------------------------------------------
# Authentication (optional)
# -----------------------------------------------------------------------------
pam = { version = "0.7", optional = true }

# =============================================================================
# Dev Dependencies
# =============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
proptest = "1.4"

# =============================================================================
# Features
# =============================================================================

[features]
default = ["pam-auth", "h264"]
wayland = ["wayland-client", "wayland-protocols"]
pam-auth = ["pam"]

# H.264 video encoding via EGFX channel
# Requires OpenH264 (BSD licensed, source bundled)
# For best performance, ensure `nasm` is installed (3x speedup)
h264 = ["openh264", "openh264-sys2"]

# Hardware-accelerated H.264 encoding (premium feature)
# VA-API: Intel (iHD/i965) and AMD (radeonsi) GPU encoding
# Requires libva-dev and GPU drivers
vaapi = ["cros-libva"]

# NVENC: NVIDIA GPU encoding via Video Codec SDK
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvenc = ["nvidia-video-codec-sdk", "cudarc"]

# Convenience: enable all hardware backends
hardware-encoding = ["vaapi", "nvenc"]

# Future features (not yet implemented)
# multimon = []       # Multi-monitor support

# =============================================================================
# Profiles
# =============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Benchmark profile - optimized for accurate measurements
[profile.bench]
opt-level = 3
debug = false
lto = "thin"

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "video_encoding"
harness = false

[[bench]]
name = "color_conversion"
harness = false

[[bench]]
name = "damage_detection"
harness = false

# =============================================================================
# Lints
# =============================================================================

[lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
elided_lifetimes_in_paths = "warn"
unreachable_pub = "warn"

[lints.clippy]
wildcard_imports = "warn"
large_futures = "warn"

# Relaxed for coordinate/graphics code
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"

# =============================================================================
# Patches - Override transitive dependencies
# =============================================================================
#
# IronRDP local fork required for file transfer methods not yet in upstream:
# - PR #1064: lock_clipboard() / unlock_clipboard()
# - PR #1065: request_file_contents()
# - PR #1066: SendFileContentsResponse
#
# Fork branch: pr3-file-contents-response-v2
# Fork location: /home/greg/wayland/IronRDP
#
# When Devolutions merges PRs #1064-1066 and publishes new version:
# 1. Remove this [patch] section
# 2. Update ironrdp-* direct dependencies to use crates.io versions
# =============================================================================

[patch.crates-io]
# Lamco crates with local fixes (not yet published)
# lamco-pipewire: Zero-size buffer validation fix (see docs/QUALITY-ISSUE-ANALYSIS-2025-12-27.md)
lamco-pipewire = { path = "../lamco-rdp-workspace/crates/lamco-pipewire" }

# IronRDP local fork - combined EGFX + file transfer support
# PRs pending upstream: #1057 (EGFX), #1064-1066 (file transfer)
# All crates patched to same source to avoid trait conflicts
ironrdp = { path = "/home/greg/wayland/IronRDP/crates/ironrdp" }
ironrdp-pdu = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-pdu" }
ironrdp-server = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-server" }
ironrdp-graphics = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-graphics" }
ironrdp-cliprdr = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-svc = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-svc" }
ironrdp-dvc = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-dvc" }
ironrdp-core = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-core" }
ironrdp-tokio = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-tokio" }
ironrdp-displaycontrol = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-displaycontrol" }
ironrdp-egfx = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-egfx" }

# Patch git dependencies from lamco-rdp-workspace (lamco-rdp-clipboard uses git fork)
# This ensures trait compatibility between git and local IronRDP sources
[patch."https://github.com/glamberson/IronRDP"]
ironrdp-cliprdr = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-core = { path = "/home/greg/wayland/IronRDP/crates/ironrdp-core" }
