[package]
name = "lamco-rdp-server"
version = "0.9.0"
edition = "2021"
rust-version = "1.77"
authors = ["Lamco <contact@lamco.ai>"]
description = "Wayland RDP server - Portal mode for Linux desktop sharing"
license = "BUSL-1.1"
repository = "https://github.com/lamco-admin/lamco-rdp-server"
homepage = "https://lamco.ai"
keywords = ["rdp", "wayland", "remote-desktop", "linux", "screen-sharing"]
categories = ["network-programming", "multimedia"]

[[bin]]
name = "lamco-rdp-server"
path = "src/main.rs"

[lib]
name = "lamco_rdp_server"
path = "src/lib.rs"

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Lamco crates (published to crates.io)
# -----------------------------------------------------------------------------
# Updated 2026-01-07: Using latest published versions
#
# NOTE: Clipboard crates MUST remain local path dependencies because they
# implement CliprdrBackend trait from ironrdp-cliprdr. Since we patch
# ironrdp-cliprdr to our fork (for file transfer methods), clipboard crates
# must compile against the same patched version to avoid trait conflicts.
lamco-wayland = "0.2.3"
lamco-rdp = "0.5.0"
lamco-portal = { version = "0.3.0", features = ["dbus-clipboard"] }
lamco-pipewire = "0.1.4"
lamco-video = "0.1.2"
lamco-rdp-input = "0.1.1"
# Clipboard crates - bundled (tightly coupled to patched ironrdp-cliprdr)
# For local dev: use ../lamco-rdp-workspace/crates/...
# For packaging: bundled-crates/... is included in tarball
lamco-clipboard-core = { path = "bundled-crates/lamco-clipboard-core", features = ["image"] }
lamco-rdp-clipboard = { path = "bundled-crates/lamco-rdp-clipboard" }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Configuration and CLI
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }

# -----------------------------------------------------------------------------
# Logging and tracing
# -----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# -----------------------------------------------------------------------------
# Error handling
# -----------------------------------------------------------------------------
anyhow = "1.0"
thiserror = "2"

# -----------------------------------------------------------------------------
# Networking and protocols
# -----------------------------------------------------------------------------
bytes = "1.5"
rustls-pemfile = "2.2"

# -----------------------------------------------------------------------------
# RDP protocol (IronRDP from lamco-admin fork)
# Fork includes: EGFX support, clipboard file transfer
# See: https://github.com/lamco-admin/IronRDP
# -----------------------------------------------------------------------------
ironrdp = { git = "https://github.com/lamco-admin/IronRDP", branch = "master", default-features = false, features = ["server"] }
ironrdp-server = { git = "https://github.com/lamco-admin/IronRDP", branch = "master", features = ["egfx"] }
ironrdp-tokio = { git = "https://github.com/lamco-admin/IronRDP", branch = "master", features = ["reqwest"] }
ironrdp-pdu = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-displaycontrol = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-cliprdr = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-core = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-dvc = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-svc = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-egfx = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }

# -----------------------------------------------------------------------------
# Wayland and Portal integration
# -----------------------------------------------------------------------------
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }
wayland-protocols-misc = { version = "0.2", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
ashpd = { version = "0.12.0", features = ["tokio"] }
zbus = "4.0.1"
enumflags2 = "0.7"

# libei/EIS protocol for Flatpak-compatible wlroots input
# Pure Rust implementation used by Smithay/COSMIC
reis = { version = "0.5", features = ["tokio"], optional = true }

# -----------------------------------------------------------------------------
# PipeWire integration
# -----------------------------------------------------------------------------
pipewire = "0.8"
libspa = "0.8"
libspa-sys = "0.8"

# -----------------------------------------------------------------------------
# Input handling
# -----------------------------------------------------------------------------
xkbcommon = "0.7"

# -----------------------------------------------------------------------------
# Image processing
# -----------------------------------------------------------------------------
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
percent-encoding = "2.3"
sha2 = "0.10"

# -----------------------------------------------------------------------------
# H.264 encoding (optional, for EGFX)
# -----------------------------------------------------------------------------
# Using published version with VUI support and NUM_REF extension for AVC444
openh264 = { version = "0.9.1", optional = true }
openh264-sys2 = { version = "0.9.1", default-features = false, features = ["source"], optional = true }

# -----------------------------------------------------------------------------
# Hardware-accelerated encoding (optional)
# -----------------------------------------------------------------------------
# VA-API: Intel/AMD GPU encoding (ChromeOS bindings)
# Requires libva-dev 1.20.0+ installed
cros-libva = { version = "0.0.13", optional = true }

# NVENC: NVIDIA GPU encoding (Video Codec SDK bindings)
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# CUDA runtime bindings for NVENC (cudarc used by nvidia-video-codec-sdk but not re-exported)
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver", "cuda-version-from-build-system"] }

# -----------------------------------------------------------------------------
# System and utilities
# -----------------------------------------------------------------------------
nix = { version = "0.29", features = ["signal", "process", "mman"] }
libc = "0.2"
fuser = "0.15"  # FUSE filesystem for clipboard file transfer
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
sysinfo = "0.30"
hostname = "0.4"
dirs = "5.0"

# -----------------------------------------------------------------------------
# Cryptography (for session token encryption)
# -----------------------------------------------------------------------------
aes-gcm = "0.10"

# -----------------------------------------------------------------------------
# Credential Storage Backends
# -----------------------------------------------------------------------------
# Secret Service API for GNOME Keyring, KWallet, KeePassXC
# Using v5.x with tokio async runtime and pure Rust crypto
secret-service = { version = "5.1", features = ["rt-tokio-crypto-rust"] }
# zeroize for secure memory handling of tokens
zeroize = "1.7"

# -----------------------------------------------------------------------------
# Memory management
# -----------------------------------------------------------------------------
memmap2 = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# -----------------------------------------------------------------------------
# Certificate generation
# -----------------------------------------------------------------------------
rcgen = "0.12"
time = { version = "0.3", features = ["formatting", "macros"] }

# -----------------------------------------------------------------------------
# Authentication (optional)
# -----------------------------------------------------------------------------
pam = { version = "0.7", optional = true }

# =============================================================================
# Dev Dependencies
# =============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
proptest = "1.4"

# =============================================================================
# Features
# =============================================================================

[features]
default = ["pam-auth", "h264"]
wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-misc", "wayland-protocols-wlr"]
libei = ["reis"]
pam-auth = ["pam"]

# H.264 video encoding via EGFX channel
# Requires OpenH264 (BSD licensed, source bundled)
# For best performance, ensure `nasm` is installed (3x speedup)
h264 = ["openh264", "openh264-sys2"]

# Hardware-accelerated H.264 encoding (premium feature)
# VA-API: Intel (iHD/i965) and AMD (radeonsi) GPU encoding
# Requires libva-dev and GPU drivers
vaapi = ["cros-libva"]

# NVENC: NVIDIA GPU encoding via Video Codec SDK
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvenc = ["nvidia-video-codec-sdk", "cudarc"]

# Convenience: enable all hardware backends
hardware-encoding = ["vaapi", "nvenc"]

# Future features (not yet implemented)
# multimon = []       # Multi-monitor support

# =============================================================================
# Profiles
# =============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Benchmark profile - optimized for accurate measurements
[profile.bench]
opt-level = 3
debug = false
lto = "thin"

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "video_encoding"
harness = false

[[bench]]
name = "color_conversion"
harness = false

[[bench]]
name = "damage_detection"
harness = false

# =============================================================================
# Lints
# =============================================================================

[lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
elided_lifetimes_in_paths = "warn"
unreachable_pub = "warn"

[lints.clippy]
wildcard_imports = "warn"
large_futures = "warn"

# Relaxed for coordinate/graphics code
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"

# =============================================================================
# Patches - Override transitive dependencies
# =============================================================================
#
# IronRDP from lamco-admin public fork with features not yet in upstream:
# - PR #1057: MS-RDPEGFX Graphics Pipeline Extension
# - PR #1063: reqwest feature fix
# - PR #1064: lock_clipboard() / unlock_clipboard()
# - PR #1065: request_file_contents()
# - PR #1066: SendFileContentsResponse
#
# Fork: https://github.com/lamco-admin/IronRDP
# Local: ~/IronRDP-public
# Tracking: ~/lamco-admin/upstream/ironrdp/PUBLIC-FORK-STATUS.md
#
# When Devolutions merges all PRs and publishes new version:
# 1. Remove this [patch] section
# 2. Update ironrdp-* direct dependencies to use crates.io versions
# =============================================================================

[patch.crates-io]
# IronRDP from lamco-admin fork - EGFX + clipboard file transfer
# PRs pending upstream: #1057 (EGFX), #1063-1066 (clipboard)
# All crates patched to same source to avoid trait conflicts
ironrdp = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-pdu = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-server = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-graphics = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-cliprdr = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-svc = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-dvc = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-core = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-tokio = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-displaycontrol = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-egfx = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }

# Patch git dependencies from lamco-rdp-workspace (lamco-rdp-clipboard uses git fork)
# Redirect glamberson fork references to lamco-admin fork
[patch."https://github.com/glamberson/IronRDP"]
ironrdp-cliprdr = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
ironrdp-core = { git = "https://github.com/lamco-admin/IronRDP", branch = "master" }
